[package]
name = "RustMiniSLAM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# File IO
image = "0.24.6"
imageproc = "0.23.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# Window
minifb = "0.24.0"

# video parser 
ffmpeg = "0.3.0"
ffmpeg-sys = {version = "4.3.3", features = ["build"]}
# OpenCV
opencv = "0.79.0"

# Type Utils
rusttype = "0.9.3"